--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -70,6 +70,7 @@ stof_doctrine_extensions:
     orm:
         default:
             sluggable: true
+            sortable: true
 
 # FOS\FOSUserBundle configuration
 fos_user:
