--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -70,7 +70,7 @@ stof_doctrine_extensions:
     orm:
         default:
             sluggable: true
-            sortable: true
+            #sortable: true
 
 # FOS\FOSUserBundle configuration
 fos_user:
