GESTION ELEVE ET PROFESSEUR END

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -37,4 +37,5 @@ security:
             #    realm: "Secured Demo Area"
 
     access_control:
-        #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
+        #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }        
+        - { path: ^/register, role: ROLE_ADMIN }
