--- a/src/Msp/FrontendBundle/Resources/config/services.yml
+++ b/src/Msp/FrontendBundle/Resources/config/services.yml
@@ -2,6 +2,8 @@ parameters:
 #    msp_frontend.example.class: Msp\FrontendBundle\Example
 
 services:
+    msp_frontend.bigbluebutton:
+        class: Msp\FrontendBundle\Service\BigBlueButton
 #    msp_frontend.example:
 #        class: %msp_frontend.example.class%
 #        arguments: [@service_id, "plain_value", %parameter%]
