END GESTION INFORMATION PROFESSEUR AND ELEVE

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -81,4 +81,7 @@ fos_user:
     registration:
         form:
             type: msp_user_registration
+    profile:
+        form:
+            type: msp_user_profile
 
