--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -38,4 +38,4 @@ security:
 
     access_control:
         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }        
-        #- { path: ^/register, role: ROLE_ADMIN }
+        - { path: ^/register, role: ROLE_ADMIN }
