--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,3 +4,9 @@ services:
         arguments: [%fos_user.model.user.class%]
         tags:
             - { name: form.type, alias: msp_user_registration }
+    
+    msp_user.profile.form.type:
+        class: Msp\UserBundle\Form\Type\ProfileFormType
+        arguments: ["@service_container",%fos_user.model.user.class%]
+        tags:
+            - { name: form.type, alias: msp_user_profile }
