--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "jms/di-extra-bundle": "1.3.*",
         "doctrine/doctrine-fixtures-bundle": "dev-master",
         "stof/doctrine-extensions-bundle": "dev-master",
-        "friendsofsymfony/user-bundle": "*"
+        "friendsofsymfony/user-bundle": "*",
+        "hackzilla/barcode-bundle": "*",
+        "spraed/pdf-generator-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
