end of fonctionnality development

--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -18,7 +18,9 @@ parameters:
     bigbluebutton_url:  http://test-install.blindsidenetworks.com/bigbluebutton/
     bigbluebutton_salt: 8cd8ef52e8e101574e400365b55e11a6
     website_name:       MathSup
-
+# info du webmaster
+    webmaster_name:     mathsup
+    webmaster_email:    mathsup@yahoo.fr
 # La note minimal pour accéder au qcm suivant
     note:               16
 
