--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -77,8 +77,14 @@ fos_user:
     db_driver: orm
     firewall_name: main
     user_class: Msp\UserBundle\Entity\User
+    use_listener: true
+    from_email:
+        address:        %webmaster_email%
+        sender_name:    %webmaster_name%
     # Necessite la création du fichier services.yml
     registration:
+        confirmation:            
+            enabled:    false
         form:
             type: msp_user_registration
     profile:
