--- a/src/Msp/FrontendBundle/Resources/config/services.yml
+++ b/src/Msp/FrontendBundle/Resources/config/services.yml
@@ -14,8 +14,8 @@ services:
         class: Msp\UserBundle\Form\RegistrationEleveFormFlow        
         parent: craue.form.flow
         scope: request
-        calls:
-            - [setFormType, ["@msp_frontend.form.registrationEleve"]]
+        #calls:
+        #    - [setFormType, ["@msp_frontend.form.registrationEleve"]]
     
 #    msp_frontend.example:
 #        class: %msp_frontend.example.class%
